架构调整，以及模块修改、添加