@@ -8,7 +8,7 @@ import java.util.Arrays;
 import java.util.List;
 
 import static com.ai.plug.common.constants.ConfigConstants.VARIABLE_PREFIX;
-import static com.ai.plug.component.config.PluginProperties.ParserType.JAVADOC;
+import static com.ai.plug.component.config.PluginProperties.ParserType.*;
 import static com.ai.plug.component.config.PluginProperties.ScopeType.INTERFACE;
 
 
@@ -17,18 +17,10 @@ import static com.ai.plug.component.config.PluginProperties.ScopeType.INTERFACE;
 @Data
 public class PluginProperties {
     private boolean enabled = false;
-
-    /**
-     * 实现方式，
-     * mvc
-     * ...
-     */
-//    private String impl = "mvc";
-
     /**
      * doc
      */
-    private List<ParserType> parser = Arrays.asList(JAVADOC);
+    private List<ParserType> parser = List.of(SWAGGER2, SWAGGER3);
 
     /**
      * scope, 默认取值 interface 即为扫描接口
@@ -36,18 +28,14 @@ public class PluginProperties {
     private ScopeType scope = INTERFACE;
 
 
-    public static enum ScopeType {
+    public enum ScopeType {
         INTERFACE,
         CUSTOM;
 
-        private ScopeType() {
-        }
     }
-    public static enum ParserType {
-        JAVADOC;
+    public enum ParserType {
+        JAVADOC, SWAGGER2, SWAGGER3;
+    }
 
-        private ParserType() {
-        }
-    }
 
 }
